# Biospheres

./: .gitignore  ADHESION_INHERITANCE_SOLUTION.md  Biospheres.code-workspace  Biospheres.sln  Biospheres.vcxproj  Biospheres.vcxproj.filters  Biospheres2.code-workspace  CELL_ID_SYSTEM.md  CLEANUP_SUMMARY.md  CMakeLists.txt  CellSim.vcxproj  CellSim.vcxproj.filters  LICENSE  PROJECT_STRUCTURE.md  README.md  RELEASE_WORKFLOW.md  SOA_REFACTOR_NOTES.md  VERSION_GUIDE.md  audio_engine.cpp  buffer_manager.h  build-debug.bat  build-release.bat  camera.cpp  camera.h  cell_manager.cpp  cell_manager.h  config.h  copy_shaders.bat  devlog.txt  frustum_culling.cpp  fullscreen_quad.cpp  fullscreen_quad.h  genome.h  genome_system.cpp  genome_system.h  glad.c  glad_helpers.cpp  glad_helpers.h  glfw_helpers.cpp  glfw_helpers.h  (+25 more)
.claude/: settings.local.json
Biospheres/build_debug/: vc143.idb
genomes/: README.md
imgui/: imconfig.h  imgui.h
shaders/: adhesion_line.frag  adhesion_line.vert  adhesion_line_gen.comp  apply_additions.comp  apply_cell_additions.comp  cell_counter.comp  cell_physics.comp  cell_physics_soa.comp  cell_physics_spatial.comp  cell_update.comp  cell_update_internal.comp  cell_update_soa.comp  cells.frag  cells_raymarching.frag  cells_raymarching_soa.frag  default.frag  default.vert  extract_instances.comp  extract_instances_soa.comp  gizmo.frag  gizmo.vert  gizmo_extract.comp  grid_assign.comp  grid_build.comp  grid_clear.comp  grid_insert.comp  grid_physics.comp  grid_prefix_sum.comp  id_manager.comp  ring_gizmo.frag  ring_gizmo.vert  shared_structs.glsl  sphere.frag  sphere.vert  sphere_lod.comp  sphere_lod.frag  test.frag
shaders/baker/: mesh_preview.frag  mesh_preview.vert  raymarching.frag  raymarching.vert
shaders/particles/: particle.frag  particle.vert  particle_extract.comp  particle_grid_insert.comp  particle_update.comp
shaders/rendering/: bridge_instance_gen.comp  bridge_render.frag  bridge_render.vert
shaders/spatial/: grid_assign.comp  grid_assign.comp.bak.20250916_201201  grid_clear.comp  grid_insert.comp
shaders/voxel/: decay.comp  (+9 more)
tools/: sync_structs.ps1  tissue_growth_simulator.py
(+235 files in other folders)
